--- a/main-2.tex
+++ b/main-2.tex
@@ -29,10 +29,68 @@
 \section{Model Selection} 
 Design and implement an algorithm that returns samples of $(S, \beta(S))$. Explicitly describe the cross-model moves (i.e., those that move between $(S, \beta(S))$ and $(S', \beta(S'))$ where $S, S'$ are distinct subsets of $\{1, 2, \dots, p\}$). \\ 
 
-On synthetic datasets: \\
-p=5 \\ 
-p=10 \\
-Compared to the actual probabilities, these ** \\ 
+
+In this problem, we have $p$ covariates, $X_1, \ldots, X_p$, and an outcome $Y$. We have $2^p$ possible regression models, one for each subset $S$ of covariates, and each has its own parameter $\beta^{(S)}$. We wish to perform inference on $(S, \beta^{(S)})$.
+
+We specify a uniform prior on $S$, so that $p(S) = 2^{-p}$ for all subsets.
+
+Below, we describe an algorithm that returns samples of $(S, \beta^{(S)})$.
+
+Let's first generate a Uniform random variable $R$ from [0,1] to determine what type of move we would like.
+
+Now, we describe the model moves. There are 4 possible types of moves. 
+
+The first possible move is a "stay" move. In this move, we let $(S, \beta) \to (S, \beta')$. We will perform a standard Metropolis-Hasting move here, and let $\beta' \sim N_{|S|}(0, I_{|S|})$. We perform this move if $R \in [0, .25)$.
+
+The second possible move is a cross model move, called "add". Here, $(S, \beta) \to (S', \beta')$, where $|S'| = |S|+1$. Let $U \sim Unif[0,1]$. Then let $h(\beta_1, U) = (\beta_1, \beta_2)$. We perform this move if $R \in [.25, .5)$.
+
+The third possible move is "delete". Let $(S, \beta) \to (S', \beta')$, where $|S'| = |S| - 1$. Let $h(\beta_1, \beta_2) = (\beta_1, U)$. We perform this move if $R \in [0.5, .75)$.
+
+The last type of move is "swap". Again, $(S, \beta) \to (S', \beta')$, with $|S'| = |S|$. We let $h(\beta^S) = (\beta^{S'})$. We perform this move if $R \in [.75, 1]$.
+
+
+Below, we report table indicating the results of running the algorithm above for 50,000 iterations with $p=5$ and $p=10$ variables.
+
+\begin{table}[H]
+    \centering
+  \caption{Counts and posterior model probabilities for various sets when $p = 5$. The true set is the one with only X3, X4, and X5.}
+  \begin{tabular}{| l c  c  c  c  c c |}
+  \hline
+  X1 & X2 & X3 & X4 & X5 & n & p \\
+  \hline
+FALSE  & FALSE  & TRUE  & TRUE  & TRUE  & 36416  & 0.728  \\
+TRUE  & FALSE  & TRUE  & TRUE  & TRUE  & 6111  & 0.122  \\
+FALSE  & TRUE  & TRUE  & TRUE  & TRUE  & 4949  & 0.099  \\
+TRUE  & TRUE  & TRUE  & TRUE  & TRUE  & 2512  & 0.05  \\
+FALSE  & FALSE  & FALSE  & TRUE  & TRUE  & 8  & 0  \\
+TRUE  & FALSE  & FALSE  & FALSE  & TRUE  & 3  & 0  \\
+FALSE  & FALSE  & FALSE  & FALSE  & TRUE  & 1  & 0  \\
+\hline
+\end{tabular}
+\label{tab:prior_table_class}
+\end{table}
+
+The results of the simulations show that the algorithm returns samples that generally follow the true model, at least in terms of inclusion of the correct variables.
+
+\begin{table}[H]
+    \centering
+  \caption{The top 8 counts and posterior model probabilities for various sets when $p = 10$. The true set is the one with only X3.}
+  \begin{tabular}{| l c  c  c  c  c c c c c c c|}
+  \hline
+  X1 & X2 & X3 & X4 & X5 & X6 & X7 & X8 & X9 & X10 & n & p \\
+  \hline
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & 41218  & 0.824  \\
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & TRUE  & FALSE  & 1742  & 0.035  \\
+FALSE  & FALSE  & TRUE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & 1159  & 0.023  \\
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & 819  & 0.016  \\
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & 756  & 0.015  \\
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & TRUE  & 662  & 0.013  \\
+TRUE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & FALSE  & 596  & 0.012  \\
+FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & 547  & 0.011  \\
+\hline
+\end{tabular}
+\end{table}
+
 
 
 \section{MALA for Standard Normals}
