--- a/main-2.tex
+++ b/main-2.tex
@@ -27,28 +27,18 @@
 \maketitle
 
 \section{Model Selection} 
-Design and implement an algorithm that returns samples of $(S, \beta(S))$. Explicitly describe the cross-model moves (i.e., those that move between $(S, \beta(S))$ and $(S', \beta(S'))$ where $S, S'$ are distinct subsets of $\{1, 2, \dots, p\}$). \\ 
-
+%Design and implement an algorithm that returns samples of $(S, \beta(S))$. Explicitly describe the cross-model moves (i.e., those that move between $(S, \beta(S))$ and $(S', \beta(S'))$ where $S, S'$ are distinct subsets of $\{1, 2, \dots, p\}$). 
 
 In this problem, we have $p$ covariates, $X_1, \ldots, X_p$, and an outcome $Y$. We have $2^p$ possible regression models, one for each subset $S$ of covariates, and each has its own parameter $\beta^{(S)}$. We wish to perform inference on $(S, \beta^{(S)})$.
-
 We specify a uniform prior on $S$, so that $p(S) = 2^{-p}$ for all subsets.
-
 Below, we describe an algorithm that returns samples of $(S, \beta^{(S)})$.
 
-Let's first generate a Uniform random variable $R$ from [0,1] to determine what type of move we would like.
-
+First we generate a Uniform random variable $R$ from [0,1] to determine what type of move we would like.
 Now, we describe the model moves. There are 4 possible types of moves. 
-
 The first possible move is a "stay" move. In this move, we let $(S, \beta) \to (S, \beta')$. We will perform a standard Metropolis-Hasting move here, and let $\beta' \sim N_{|S|}(0, I_{|S|})$. We perform this move if $R \in [0, .25)$.
-
-The second possible move is a cross model move, called "add". Here, $(S, \beta) \to (S', \beta')$, where $|S'| = |S|+1$. Let $U \sim Unif[0,1]$. Then let $h(\beta_1, U) = (\beta_1, \beta_2)$. We perform this move if $R \in [.25, .5)$.
-
+The second possible move is a cross model move, called "add". Here, $(S, \beta) \to (S', \beta')$, where $|S'| = |S|+1$. Let $U \sim \text{Unif}[0,1]$. Then let $h(\beta_1, U) = (\beta_1, \beta_2)$. We perform this move if $R \in [.25, .5)$.
 The third possible move is "delete". Let $(S, \beta) \to (S', \beta')$, where $|S'| = |S| - 1$. Let $h(\beta_1, \beta_2) = (\beta_1, U)$. We perform this move if $R \in [0.5, .75)$.
-
 The last type of move is "swap". Again, $(S, \beta) \to (S', \beta')$, with $|S'| = |S|$. We let $h(\beta^S) = (\beta^{S'})$. We perform this move if $R \in [.75, 1]$.
-
-
 Below, we report table indicating the results of running the algorithm above for 50,000 iterations with $p=5$ and $p=10$ variables.
 
 \begin{table}[H]
@@ -95,15 +85,19 @@ FALSE  & FALSE  & TRUE  & FALSE  & FALSE  & FALSE  & FALSE  & TRUE  & FALSE  & F
 
 \section{MALA for Standard Normals}
 
-How sample size grows as MCMC iterations increases \\
-Examining the bias of estimating the first and second moments of the distribution, which are known in advance \\ 
-
-
-
-Parameters: $\lambda, d, \theta \in\mathbb{R}^{d}$
+In this problem, we derive and implement a Metropolis-adjusted Langevin algorith (MALA) for sample from a standard normal.
+The general MALA update for the parameter $\theta \in\mathbb{R}^{d}$ is:
 \begin{align}
-    & \theta_{k+1} = \theta_{k} + \frac{1}{2}\lambda^{2} \nabla log(\pi(\theta_{k}) 
+    & \theta_{k+1} = \theta_{k} + \frac{\lambda^{2}}{2} \nabla \log(\pi(\theta_{k}))
 \end{align}
+where $\lambda$ is a hyperparameter specified by the user and often referred to as the ``step-size."
+
+Below we derive the MALA sampler for this problem by computing the gradient of the log-prior:
+\begin{align}
+	\nabla \log(\pi(\theta_{k})) & = \nabla \left(-\log(c) - \frac{1}{2} ||\theta||_2^2 \right) \\
+	& = -\theta_{k}.
+\end{align}
+Thus, the update for our sampler is $$\theta_{k+1} = \theta_{k} \left(1 - \frac{\lambda^{2}}{2}\right).$$
 
 We tested our the performance of our MALA sampler on a grid of values of dimension $d = 1, 10, 100$ and step sizes $\lambda = 0.25, 0.5, 1, 2$.
 For each experiment, we used a burn-in period of 1000 iterations.
